package mycalendar.modele;

public class ApplicationServeur {
}
