package mycalendar.modele;

public class ConnexionClient {
}
